<?xml version="1.0"?>
<package format="2">

  <name>ros_mppt</name>
  <version>0.1.0</version>
  <description>MPPT message sender package</description>
  <maintainer email="aaronpb@todo.todo">aaronpb</maintainer>
  <license>GNU GPL v3.0</license>

  <url type="website">http://wiki.ros.org/ros_mppt</url>
  <author>Aaron PB</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

</package>
